# centerProject

./: .env.example  .gitignore  README.md  vercel.json
QA_dataset/: leather_repair_qa.md
QA_dataset/vision_eval/: manifest.jsonl
backend/: build.py  pyproject.toml  requirements.txt  server.py
backend/app/: __init__.py  bailian.py  bailian_application.py  care_plan.py  case_repository.py  case_service.py  chat_service.py  config.py  eval_service.py  knowledge_pipeline.py  retriever.py  server.py  types.py  utils.py  vision_service.py
backend/tests/: test_bailian_app.py  test_case_workflow.py  test_pipeline.py
design-system/leather-care-rag-assistant/: MASTER.md
knowledge/raw/: 01-vegetable-tanned-care.md  02-suede-and-patent.md  03-hardware-edge-paint.md  04-storage-and-mold.md  05-rain-damage-and-hardening.md  06-lambskin-scratch-care.md  07-togo-shape-recovery.md  08-coated-canvas-cleaning.md  09-nylon-corner-repair.md  10-top-grain-recoloring.md  11-material-identification-guide.md  12-toolkit-and-chemical-safety.md  13-storage-humidity-and-seasonal-care.md  14-home-care-vs-professional-repair.md  15-vegetable-tanned-handle-darkening-patina.md  16-vegetable-tanned-water-stain-wet-darkening.md  17-smooth-light-leather-color-transfer.md  18-lambskin-surface-marks.md  19-patent-leather-color-transfer.md  20-suede-watermark-oil-routing.md  21-coated-canvas-cleaning-near-trim.md  22-wet-bag-drying-reshaping.md  23-storage-deformation-prevention.md  24-longchamp-le-pliage-corner-zipper-handle-repair.md  (+48 more)
scripts/: bootstrap.sh  ingest.sh  run_demo.sh
(+19 files in other folders)
